--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Report a bug to help us improve the project.
-title: "[Bug]: "
+title: "[BUG]: "
 labels: ["bug"]
 body:
     - type: markdown
