--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature request
 description: Suggest an idea for this project
-title: "[Feature Request]: "
+title: "[FEAT]: "
 labels: [ "enhancement" ]
 body:
   - type: markdown
