--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "readme": "REAME.md",
   "license": "MIT",
-  "packageManager": ">=pnpm@9.0.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -14,6 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
