--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
