--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Set Up Node.js and pnpm
         uses: actions/setup-node@v4
         with:
-          node-version: 18  # Use your project's Node.js version
-          cache: pnpm
+          node-version: 20
+          cache: npm
 
       - name: Install pnpm
         run: npm install -g pnpm
